replace facebook as bluesky in author-profile.html and _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  bluesky          : "shirllim.bsky.social"
   foursquare       :
   github           : "shirllim"
   google_plus      :
