--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Postdoc at Center for Taste and Feeding Behaviour, INRAE. My work primarily centers around flavor perception, where I am investigating the underlying brain mechanisms of taste-odor integration"
   location         : "Dijon, France"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : ""
   googlescholar    : "https://scholar.google.com.sg/citations?user=uJfycGcAAAAJ&hl=en"
   email            : "xue-li.lim@inrae.fr"
   researchgate     :  "https://www.researchgate.net/profile/Shirley-Lim-7"
