--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,25 @@
 # main links links
 main:
+  - title: "Blog"
+    url: /year-archive/
+
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Communications"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+#  - title: "Teaching"
+#    url: /teaching/
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+#  - title: "Portfolio"
+#    url: /portfolio/
     
   - title: "CV"
     url: /cv/
+
+  - title: "About Me"
+    url: /
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+#    url: /markdown/
