--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Communications"
+  - title: "Poster/Talks"
     url: /talks/    
 
 #  - title: "Teaching"
