Revert "change tabs"
This reverts commit 1bad65003f98f75ae5fbb4989a8bb7e78d01112c.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Poster/Talks"
+  - title: "Communications"
     url: /talks/    
 
 #  - title: "Teaching"
